<project
  xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
>
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.foxmindedjavaspring.university</groupId>
  <artifactId>Java-Spring</artifactId>
  <version>1.0</version>
  <properties>
    <junit-jupiter-version>5.8.2</junit-jupiter-version>
    <junit-platform-version>1.8.2</junit-platform-version>
    <maven-compiler-plugin-version>3.10.1</maven-compiler-plugin-version>
    <maven-surefire-plugin>2.22.0</maven-surefire-plugin>
    <junit-platform-surefire-provider.version
    >1.3.2</junit-platform-surefire-provider.version>
    <mockito-core-version>4.6.1</mockito-core-version>
    <postgresql-version>42.4.0</postgresql-version>
    <mockito-jupiter-version>4.6.1</mockito-jupiter-version>
    <mockito-inline-version>4.6.1</mockito-inline-version>
    <spring-version>5.3.22</spring-version>
    <hikaricp-version>5.0.1</hikaricp-version>
  </properties>
  <dependencies>
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>${postgresql-version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-beans</artifactId>
      <version>${spring-version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-context</artifactId>
      <version>${spring-version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-core</artifactId>
      <version>${spring-version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-jdbc</artifactId>
      <version>${spring-version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-test</artifactId>
      <version>${spring-version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.zaxxer</groupId>
      <artifactId>HikariCP</artifactId>
      <version>${hikaricp-version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit-jupiter-version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
  	  <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
  	  <version>${junit-jupiter-version}</version>
  	  <scope>test</scope>
    </dependency>
    <dependency>
  	  <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
  	  <version>${junit-jupiter-version}</version>
  	  <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-runner</artifactId>
      <version>${junit-platform-version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-launcher</artifactId>
      <version>${junit-platform-version}</version>
    </dependency>
	  <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>${mockito-core-version}</version>
      <scope>test</scope>
	  </dependency>
	  <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <version>${mockito-jupiter-version}</version>
      <scope>test</scope>
	  </dependency>
	  <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-inline</artifactId>
      <version>${mockito-inline-version}</version>
      <scope>test</scope>
	  </dependency>
  </dependencies>  
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin}</version>
        <configuration>
          <includes>
            <include>**/*Test.java</include>
          </includes>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-surefire-provider</artifactId>
            <version>${junit-platform-surefire-provider.version}</version>
          </dependency>
        </dependencies>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin-version}</version>
        <configuration>
          <source>11</source>
          <target>11</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
